--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 SECRET_KEY=secret-key-wildan
 SQLALCHEMY_DATABASE_URI=mysql+pymysql://root:boyblanco@localhost:3306/bunda_care
+GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=your-google-client-secret
