dasboard mobile integration update

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 SECRET_KEY=secret-key-wildan
-SQLALCHEMY_DATABASE_URI=mysql+pymysql://root:boyblanco@localhost:3306/bunda_care
+# Neon PostgreSQL URL format dengan SSL mandatory
+# Format: postgresql://username:password@hostname/database?sslmode=require&channel_binding=require
+SQLALCHEMY_DATABASE_URI=postgresql://neondb_owner:your_password@ep-example-region.aws.neon.tech/bunda_care?sslmode=require&channel_binding=require
 GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=your-google-client-secret
