--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ SECRET_KEY=secret-key-wildan
 SQLALCHEMY_DATABASE_URI=postgresql://neondb_owner:your_password@ep-example-region.aws.neon.tech/bunda_care?sslmode=require&channel_binding=require
 GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=your-google-client-secret
+GRADIO_API_URL=
